--- a/index.html
+++ b/index.html
@@ -5,69 +5,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motun Delicious Bites Menu</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal:ital,wght@0,400;0,700;1,400;1,700&family=Satisfy&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Heading with the name of the Restaurant -->
-    <h1>Motun Delicious Bites Menu</h1>
+    <!-- Heading with the name of the Restaurant and Logo-->
+    <nav class="navigation_section">
+        <!-- Logo -->
+        <div class="logo">
+            <a href="#"><img src="/images/360_F_275700347_09reCCwb7JBxTKiYQXsyri4riMKaHbj8-removebg-preview.png" alt="Motun Delicious Bites Logo" ></a>
+        </div>
+
+        <!-- Header Title -->
+        <div class="header_title">
+            <h1><a href="#">Motun Delicious Bites Menu</a></h1>
+        </div>
+    </nav>
 
     <!-- Appetizers Section and Description -->
-    <h2>Appetizers</h2>
-    <ul>
-        <li>
-            <strong>Caprese Salad</strong>
-            <p>Fresh tomatoes, mozzarella, and basil drizzled with balsamic glaze.</p>
-        </li>
-        <li>
-            <strong>Spinach Artichoke Dip</strong>
-            <p>Creamy spinach and artichoke dip served with tortilla chips.</p>
-        </li>
-        <li>
-            <strong>Bruschetta</strong>
-            <p>Grilled bread topped with fresh tomatoes, garlic, basil, and olive oil.</p>
-        </li>
-    </ul>
+    <section class="menu">
+
+        <!-- Image -->
+        <div class="image_1">
+            <img src="" alt="">
+        </div>
+
+        <!-- Appetizer Menu -->
+        <div class="meal_menu">
+            <h2>Appetizers</h2>
+            <ul>
+                <li>
+                    <strong>Caprese Salad</strong>
+                    <p>Fresh tomatoes, mozzarella, and basil drizzled with balsamic glaze.</p>
+                </li>
+                <li>
+                    <strong>Spinach Artichoke Dip</strong>
+                    <p>Creamy spinach and artichoke dip served with tortilla chips.</p>
+                </li>
+                <li>
+                    <strong>Bruschetta</strong>
+                    <p>Grilled bread topped with fresh tomatoes, garlic, basil, and olive oil.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
 
         
     <!-- Main Course Section and Description -->
-    <h2>Main Courses</h2>
-    <ul>
-        <li>
-            <strong>Grilled Salmon</strong>
-            <p>Salmon fillet seasoned and grilled to perfection, served with lemon butter sauce.</p>
-        </li>
-        <li>
-            <strong>Filet Mignon</strong>
-            <p>Tender beef filet grilled to your liking, served with mashed potatoes and asparagus.</p>
-        </li>
-        <li>
-            <strong>Chicken Alfredo</strong>
-            <p>Grilled chicken breast served over fettuccine pasta with creamy Alfredo sauce.</p>
-        </li>
-    </ul>
+    <section class="menu">
+        <div class="meal_menu_left">
+            <h2>Main Courses</h2>
+            <ul>
+                <li>
+                    <strong>Grilled Salmon</strong>
+                    <p>Salmon fillet seasoned and grilled to perfection, served with lemon butter sauce.</p>
+                </li>
+                <li>
+                    <strong>Filet Mignon</strong>
+                    <p>Tender beef filet grilled to your liking, served with mashed potatoes and asparagus.</p>
+                </li>
+                <li>
+                    <strong>Chicken Alfredo</strong>
+                    <p>Grilled chicken breast served over fettuccine pasta with creamy Alfredo sauce.</p>
+                </li>
+            </ul>
+        </div>
+        <div class="image_2">
+            <img src="" alt="">
+        </div>
+    </section>
 
     
     <!-- Desserts Section and Description -->
-    <h2>Desserts</h2>
-    <ul>
-        <li>
-            <strong>Chocolate Fondue</strong>
-            <p>Assorted fruits and marshmallows served with rich chocolate fondue.</p>
-        </li>
-        <li>
-            <strong>New York Cheesecake</strong>
-            <p>Creamy cheesecake with a graham cracker crust, topped with fresh strawberries.</p>
-        </li>
-        <li>
-            <strong>Tiramisu</strong>
-            <p>Classic Italian dessert made with layers of coffee-soaked ladyfingers and mascarpone cheese.</p>
-        </li>
-    </ul>
+    <section class="menu">
+        <div class="image_3">
+                <img src="" alt="">
+            </div>
+        <div class="meal_menu">
+            <h2>Desserts</h2>
+            <ul>
+                <li>
+                    <strong>Chocolate Fondue</strong>
+                    <p>Assorted fruits and marshmallows served with rich chocolate fondue.</p>
+                </li>
+                <li>
+                    <strong>New York Cheesecake</strong>
+                    <p>Creamy cheesecake with a graham cracker crust, topped with fresh strawberries.</p>
+                </li>
+                <li>
+                    <strong>Tiramisu</strong>
+                    <p>Classic Italian dessert made with layers of coffee-soaked ladyfingers and mascarpone cheese.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
 
-
-    <!-- Placeholder Contact link -->
-    <p><a href="contact.html">Contact us for reservations</a></p>
-
-    <!-- Accessibility option to go back to top of page -->
-    <p><a href="#">Back to the top</a></p>
+    <footer class="contact_back_top">
+        <!-- Placeholder Contact link -->
+        <p><a href="contact.html">Contact us for reservations</a></p>
+        <!-- Accessibility option to go back to top of page -->
+        <p><a href="#">&#8593; back to top page</a></p>
+    </footer>
 </body>
 </html>
